k8s_yaml/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql-deployment
  labels: 
    app: mysql
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports: 
        - containerPort: 3306
