k8s_yaml/online-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: online-store
  labels: 
    app: online-store
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: online-store
  template:
    metadata:
      labels:
        app: online-store
    spec:
      containers:
      - name: online-store
        image: osamamagdy/online_store
        ports:
        - containerPort: 8080
