k8s_yaml/online-store-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: online-store-service
spec: 
  selector:
    app: online-store
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000 #this is the port for external ip address that you will type into your browser
